# myweepal

./: .env.example  .gitignore  README.md  README_UPGRADE.md  enroll_speaker.py  main.py  migrate.py  pyproject.toml  quick_start.py  speaker_admin.py  test_basic.py  test_speaker.py
docs/: ENV_CONFIG.md  SPEAKER_SETUP.md
migration_backup/: config.yaml
myweepal/: __init__.py  main.py
myweepal/audio/: __init__.py  asr.py  emotion_tts.py  speaker_recognition.py  streaming.py  tts.py
myweepal/core/: __init__.py  dialogue.py  llm.py  memory.py  personalized_memory.py
myweepal/vision/: __init__.py  emotion.py
tests/: __init__.py  test_emotion_tts.py  test_llm.py  test_llm_qwen.py  test_memory.py  test_speaker_recognition.py  test_streaming_asr.py
