[tool.poetry]
name = "myweepal"
version = "0.1.0"
description = "Local conversational life-story AI for Apple Silicon"
authors = ["David Irvine <david@saorsalabs.com>"]
readme = "README.md"
python = "^3.10"

[tool.poetry.dependencies]
python = "^3.10"
mlx = "^0.21.0"
mlx-lm = "^0.20.0"
numpy = "^1.24.0"
opencv-python = "^4.8.0"
torch = "^2.0.0"
transformers = "^4.36.0"
whisper = "^1.1.10"
chromadb = "^0.4.22"
pydantic = "^2.5.0"
fastapi = "^0.109.0"
uvicorn = "^0.27.0"
python-multipart = "^0.0.6"
aiofiles = "^23.2.1"
sounddevice = "^0.4.6"
scipy = "^1.11.0"
TTS = "^0.22.0"
face-recognition = "^1.3.0"
fer = "^22.5.1"
python-dotenv = "^1.0.0"
typer = "^0.9.0"
rich = "^13.7.0"

[tool.poetry.group.dev.dependencies]
pytest = "^7.4.0"
pytest-asyncio = "^0.21.0"
pytest-cov = "^4.1.0"
black = "^23.12.0"
ruff = "^0.1.0"
mypy = "^1.8.0"
pre-commit = "^3.6.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.black]
line-length = 100
target-version = ['py310']

[tool.ruff]
line-length = 100
select = ["E", "F", "I", "N", "W", "B", "C90", "D", "UP", "S", "T", "A", "C4", "PIE", "RET", "SIM", "ARG", "PTH", "ERA", "PL", "PERF", "RUF"]
ignore = ["D100", "D101", "D102", "D103", "D104", "D105", "D106", "D107"]

[tool.mypy]
python_version = "3.10"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true
disallow_any_unimported = true
no_implicit_optional = true
warn_redundant_casts = true
warn_unused_ignores = true
warn_no_return = true
check_untyped_defs = true
strict_equality = true

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
addopts = "--cov=myweepal --cov-report=term-missing --cov-report=html --cov-fail-under=85"